Refactor imports and improve code organization across multiple pages and services